# rust-kernel-x86_64-static-link-code-model-kernel

./: Cargo.toml  Makefile  README.md  link.ld  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  start.S
