[package]
name = "kernel"
description = """
A kernel that
"""
version = "0.1.0"
authors = ["Philipp Schuster <philipp.schuster@cyberus-technology.de>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# accelerates code startup by noticable amount
opt-level = 1

[dependencies]
x86 = "0.51.0"